<resources>
    <string name="app_name">Taskmaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="placeholder_image">placeholder_image</string>
    <string name="Add_Task">Add Task</string>
    <string name="AllTasks">All Tasks</string>
    <string name="SubmitButton">Submit</string>
    <string name="TaskDetailTitle">Task Detail</string>
    <string name="LoremIpsum">Lorem Ipsum</string>
    <string name="Username">Username</string>
    <string name="save">save</string>
    <string name="Save">Save</string>
    <string name="task1">task1</string>
    <string name="task2">task2</string>
    <string name="task3">task3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_task_name">Blank Task Name</string>
    <string name="task_team_select">Select Task Team</string>
    <string name="announce">announce</string>
</resources>